--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
 <div class="row">
     <div class="col-2"></div>
     <div class="col-2">
-        <img src="img/profile.png" class="rounded mx-auto d-block" alt="...">
+        <img src="img/profile.png" class="rounded mx-auto d-block img-fluid" alt="...">
     </div>
     <div class="col-6" style="padding-left:0;">
-        <div style="border:2px solid black;height:230px;margin-right:170px;">
+        <div style="border:2px solid black;height:230px;margin-right:170px;max-width:100%;overflow:auto;">
             <div ng-app="app" ng-controller="Ctrl">
                 <form editable-form name="editableForm" onaftersave="saveUser()">
                     <div>
