--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <a class="navbar-brand" href="#" style="font-weight:bold;"><img src="img/0141015508-18.gif" width="200" height="50" class="d-inline-block align-top" alt=""></a>
 
 <span class="navbar-text">
-    <span style="font-weight: bold;">Hello,16@test.com</span>
+    <span style="font-weight: bold;">Hello,Bienvenido</span>
     <a class="nav-link" href="#" style="color:grey; display:inline-block;padding-right:0;">
         Log Out
     </a>
