--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
         <div class = col-2">
              <div style="padding:10px;margin:5px;">
-            <ng-gauge  type="full" size="170" thick="6" label="Product" append="%"
+            <ng-gauge  type="full" size="170" thick="6" label="whatever" append="%"
                       prepend=" " cap="round" foreground-color="orange"
                       background-color="rgba(0, 0, 0, 0.1)" value="27" min="0" max="100"
                       thresholds=""></ng-gauge>
@@ -157,7 +157,7 @@
 
         <div class = col-2">
             <div style="padding:10px;margin:5px;">
-                <ng-gauge  type="full" size="170" thick="6" label="Runway" append="months"
+                <ng-gauge  type="full" size="170" thick="6" label="whatever" append="months"
                            prepend=" " cap="round" foreground-color="red"
                            background-color="rgba(0, 0, 0, 0.1)" value="3" min="0" max="12"
                            thresholds=""></ng-gauge>
@@ -165,14 +165,14 @@
         </div>
 
         <div class = col-2"  style="padding:10px;margin:5px;">
-            <ng-gauge  type="full" size="170" thick="6" label="Conversation" append=""
-                      prepend="" cap="round" foreground-color="rgba(241, 121, 23, 1)"
+            <ng-gauge  type="full" size="170" thick="6" label="SomeWordssome" append=""
+                      prepend="" cap="xxxx" foreground-color="rgba(241, 121, 23, 1)"
                       background-color="rgba(0, 0, 0, 0.1)" value="24" min="0" max="100"
                       thresholds=""></ng-gauge>
         </div>
     <div class = col-2" style="padding:10px;margin:5px;">
-        <ng-gauge  type="full" size="170" thick="6" label="Engagement" append="%"
-                  prepend=" " cap="round" foreground-color="rgba(24, 241, 52, 1)"
+        <ng-gauge  type="full" size="170" thick="6" label="SomeTexts" append="%"
+                  prepend=" " cap="somexx" foreground-color="rgba(24, 241, 52, 1)"
                   background-color="rgba(0, 0, 0, 0.1)" value="100" min="0" max="100"
                   thresholds=""></ng-gauge>
     </div>
